# pi-generator

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
requirements/: requirements-dev.in  requirements-dev.txt  requirements.txt
src/pi_generator/: dataset.py  eval.py  main.py  model.py  utils.py
